@startuml
'https://plantuml.com/class-diagram

class Car {
    ~wheel:String
    ~oilBox:String
    ~body:String
}

abstract class Builder {
    #car:Car
    +{abstract}buildWheel():void
    +{abstract}buildOilBox():void
    +{abstract}buildBody():void
    +getCar():Car
}

class BMWBuilder extends Builder {
    +buildWheel():void
    +buildOilBox():void
    +buildBody():void
}

class BenZBuilder extends Builder {
    +buildWheel():void
    +buildOilBox():void
    +buildBody():void
}

class Director {
    -builder:Builder
    +setBuilder(builder:Builder):void
    +buildCar():Car
}

Director o-- Builder
Director ..> Car
Builder *-- Car


@enduml